--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,5 +14,10 @@ pipeline {
                checkout([$class: 'GitSCM', branches: [[name: '*/master']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/boya77/boya-devops.git']]])
             }            
         }
+        stage(pwd) {
+            steps {
+                pwd
+            }
+        }
     }   
 }
